# verda

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODEOWNERS  CODEX_SESSIONS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  TRADEMARK.md  pyrightconfig.json
backend/: pyproject.toml  requirements.txt
backend/tests/: _helpers.py  test_api.py  test_auth.py  test_document_export.py  test_e2e.py  test_encryption.py  test_evidence_codex.py  test_export_docker.py  test_export_encrypted_wrapper.py  test_export_usb.py  test_folders.py  test_iam.py  test_mcp_server.py  test_packaging.py  test_precedent_linker.py  test_procedural_engine.py
backend/tests/fixtures/sample_case/: 10_case_notes.md  (+10 more)
backend/wakili/: config.py  db.py  main.py  schemas.py
backend/wakili/adapters/: codex_replay.py  llm.py
backend/wakili/api/: auth.py  cases.py  exports.py  folders.py  generation.py  health.py  mcp.py  outputs.py  profile.py
backend/wakili/auth/: __init__.py  access.py  dependencies.py  dependencies_case.py  oidc.py  permissions.py  providers.py
backend/wakili/mcp/: __init__.py  africanlii.py  case_knowledge.py  kenyalaw.py
backend/wakili/mcp_server/: __init__.py  __main__.py  server.py
backend/wakili/modules/: __init__.py  defender_safety.py  evidence_codex.py  precedent_linker.py  procedural_engine.py
backend/wakili/services/: audit.py  case_service.py  document_exporter.py  encryption.py  folder_service.py  intake.py  kenyalaw_scraper.py  orchestrator.py  packaging.py  planning.py  preprocessing.py  profile_service.py
(+129 files in other folders)
